[gd_scene load_steps=27 format=3 uid="uid://b68y2gupisf4b"]

[ext_resource type="Script" path="res://screens/main_menu.gd" id="1_pu06s"]
[ext_resource type="Shader" path="res://fx/BgFx.gdshader" id="2_t1tfm"]
[ext_resource type="Script" path="res://terrain/generator/GeneratedPatternTile.gd" id="3_aexq6"]
[ext_resource type="Texture2D" uid="uid://4qhc7c7p5ddt" path="res://levels/airport.png" id="4_udnss"]
[ext_resource type="Shader" path="res://framework/Shaders/Spiral.gdshader" id="6_yqy2b"]
[ext_resource type="Shader" path="res://framework/Shaders/wobbly.gdshader" id="8_7bs1y"]
[ext_resource type="Texture2D" uid="uid://gytevy852v05" path="res://object/coin/coin.png" id="8_la2lr"]
[ext_resource type="Texture2D" uid="uid://dsqpajv3lmo1t" path="res://object/player/player-idle.png" id="8_tysvk"]
[ext_resource type="AudioStream" uid="uid://d3dagr7m65e0p" path="res://ui/main_menu/sound/scroll1.wav" id="9_bv76o"]
[ext_resource type="AudioStream" uid="uid://cc41c5hxj4aem" path="res://ui/main_menu/sound/scroll2.wav" id="10_cpq0e"]
[ext_resource type="AudioStream" uid="uid://dkxvv33b4whr0" path="res://ui/main_menu/sound/select.wav" id="10_std1w"]
[ext_resource type="AudioStream" uid="uid://cmtphpvv51tqt" path="res://ui/main_menu/sound/select2.wav" id="11_8cauw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1ebs"]
shader = ExtResource("2_t1tfm")
shader_parameter/alpha = 1.0
shader_parameter/h_osc_speed = 1.0
shader_parameter/h_osc = true
shader_parameter/h_osc_interleaved = true
shader_parameter/h_osc_width = 1.2645
shader_parameter/h_osc_freq = -1.9645
shader_parameter/v_osc_speed = 2.2
shader_parameter/v_osc = false
shader_parameter/v_osc_width = 0.1
shader_parameter/v_osc_freq = 2.0
shader_parameter/scroll = false
shader_parameter/scroll_speed = 0.0155
shader_parameter/scroll_dir = Vector2(1, 1)
shader_parameter/use_custom_texture = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fh2b0"]
shader = ExtResource("2_t1tfm")
shader_parameter/alpha = 0.49
shader_parameter/h_osc_speed = 0.9095
shader_parameter/h_osc = true
shader_parameter/h_osc_interleaved = false
shader_parameter/h_osc_width = -0.9365
shader_parameter/h_osc_freq = 0.728
shader_parameter/v_osc_speed = 0.785
shader_parameter/v_osc = true
shader_parameter/v_osc_width = 1.1915
shader_parameter/v_osc_freq = 0.483
shader_parameter/scroll = true
shader_parameter/scroll_speed = 0.245
shader_parameter/scroll_dir = Vector2(1.863, -0.197)
shader_parameter/use_custom_texture = false

[sub_resource type="Image" id="Image_5bvoi"]
data = {
"data": PackedByteArray(0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 109, 1, 83, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 117, 18, 101, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255, 0, 0, 0, 255),
"format": "RGBA8",
"height": 32,
"mipmaps": false,
"width": 32
}

[sub_resource type="ImageTexture" id="ImageTexture_7mq5t"]
image = SubResource("Image_5bvoi")
script = ExtResource("3_aexq6")
pattern_index = 4
palette_index = 5
palette_offset = 4
filename_string = ""
image_type = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0c8u1"]
shader = ExtResource("2_t1tfm")
shader_parameter/alpha = 0.24
shader_parameter/h_osc_speed = 1.0
shader_parameter/h_osc = true
shader_parameter/h_osc_interleaved = true
shader_parameter/h_osc_width = 0.0025
shader_parameter/h_osc_freq = 9.1885
shader_parameter/v_osc_speed = 2.2
shader_parameter/v_osc = false
shader_parameter/v_osc_width = 0.1
shader_parameter/v_osc_freq = 2.0
shader_parameter/scroll = false
shader_parameter/scroll_speed = -0.015
shader_parameter/scroll_dir = Vector2(1, 0)
shader_parameter/use_custom_texture = false

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_exuxn"]
blend_mode = 2

[sub_resource type="Gradient" id="Gradient_hgxg4"]
offsets = PackedFloat32Array(0, 0.53012, 1)
colors = PackedColorArray(0.81447, 9.62615e-07, 0.47356, 1, 0.678442, 0, 0.0324304, 0.46988, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xfs4l"]
gradient = SubResource("Gradient_hgxg4")
width = 640
height = 360
fill = 1
fill_from = Vector2(0.515152, 0.529742)
fill_to = Vector2(0.691919, 0.228956)
repeat = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sog6i"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_djjyl"]
offsets = PackedFloat32Array(0, 0.53012, 1)
colors = PackedColorArray(0.81447, 9.62615e-07, 0.47356, 1, 0.678442, 0, 0.0324304, 0.46988, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ug1yh"]
gradient = SubResource("Gradient_djjyl")
width = 640
height = 360
fill_from = Vector2(0, 1)
fill_to = Vector2(0.492424, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rp7pd"]
shader = ExtResource("6_yqy2b")
shader_parameter/time_scale = 0.8945
shader_parameter/squash_scale = 0.0
shader_parameter/squash_time_scale = -0.157
shader_parameter/ratio = 0.837
shader_parameter/power = 2.5605
shader_parameter/min_speed = 11.803
shader_parameter/max_speed = 88.78
shader_parameter/modulate_color = Color(0.417113, 1.95411e-05, 0.329989, 0.635294)
shader_parameter/alpha = 1.0
shader_parameter/global_position = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0jnge"]
shader = ExtResource("8_7bs1y")
shader_parameter/normal_offset = 0.6
shader_parameter/time_influence = 0.245
shader_parameter/y_div = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk43h"]
shader = ExtResource("8_7bs1y")
shader_parameter/normal_offset = 1.5
shader_parameter/time_influence = 0.753
shader_parameter/y_div = 2.87

[node name="CanvasLayer" type="CanvasLayer"]
physics_interpolation_mode = 2
script = ExtResource("1_pu06s")
MENU_TILT = 0.15
MENU_WIDTH = 599.363
MENU_WIDTH_MOD = 0.8945
MENU_HEIGHT = 250.0
MENU_OFFSET = Vector2(11.6175, 10.8595)
NUM_SHOWN = 9
ARC_LENGTH = 3.3758
CURVE_OFFSET = 2.7895
MENU_BREATHE_AMOUNT = 0.0065
MENU_BREATHE_SPEED = 1.4095
CURVE_WIGGLE_AMOUNT = 0.0185
CURVE_WIGGLE_SPEED = 0.8025
MENU_WIGGLE_AMOUNT = 0.004
MENU_WIGGLE_SPEED = 1.633
SELECT_SMOOTHING_HALF_LIFE = 1.406
START_DISTANCE_MULTIPLIER = 1.2

[node name="Bg2" type="CanvasLayer" parent="."]

[node name="BgColor" type="ColorRect" parent="Bg2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BgTexture3" type="TextureRect" parent="Bg2"]
material = SubResource("ShaderMaterial_x1ebs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -138.0
offset_right = 277.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1

[node name="BgTexture" type="TextureRect" parent="Bg2"]
material = SubResource("ShaderMaterial_fh2b0")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_7mq5t")
expand_mode = 1
stretch_mode = 1

[node name="BgTexture2" type="TextureRect" parent="Bg2"]
visible = false
material = SubResource("ShaderMaterial_0c8u1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_udnss")
expand_mode = 1
stretch_mode = 1

[node name="ColorRect" type="TextureRect" parent="Bg2"]
material = SubResource("CanvasItemMaterial_exuxn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_xfs4l")

[node name="ColorRect2" type="TextureRect" parent="Bg2"]
material = SubResource("CanvasItemMaterial_sog6i")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ug1yh")

[node name="Bg" type="CanvasLayer" parent="."]

[node name="MenuStuff" type="CanvasLayer" parent="."]

[node name="Anchor" type="Node2D" parent="MenuStuff"]
position = Vector2(320, 0)
metadata/_edit_lock_ = true

[node name="CenterElement" type="Node2D" parent="MenuStuff"]
position = Vector2(0, -16)

[node name="ColorRect" type="Sprite2D" parent="MenuStuff/CenterElement"]
visible = false
z_index = -65
material = SubResource("ShaderMaterial_rp7pd")
position = Vector2(320, 196)
scale = Vector2(40, 28.0415)
texture = ExtResource("8_tysvk")

[node name="Sprite" type="Sprite2D" parent="MenuStuff/CenterElement"]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_0jnge")
position = Vector2(331, 191)
scale = Vector2(19.875, 16.875)
texture = ExtResource("8_tysvk")

[node name="Label" type="Label" parent="MenuStuff"]
visible = false
offset_left = 75.0
offset_top = 10.0
offset_right = 585.0
offset_bottom = 68.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "THE TITLE OF GAME"

[node name="Label2" type="Label" parent="MenuStuff"]
visible = false
offset_left = 384.0
offset_top = 60.0
offset_right = 894.0
offset_bottom = 118.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "RELOADED"

[node name="Starparticle" type="Sprite2D" parent="MenuStuff"]
visible = false
z_index = 4096
material = SubResource("ShaderMaterial_uk43h")
position = Vector2(93, 250)
scale = Vector2(3, 3)
texture = ExtResource("8_la2lr")

[node name="Sounds" type="Node" parent="."]

[node name="Scroll1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_bv76o")
volume_db = -2.8145
pitch_scale = 2.0
bus = &"Fx"

[node name="Scroll2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_cpq0e")
volume_db = -30.1548
pitch_scale = 8.0
bus = &"Fx"

[node name="Select1" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("10_std1w")
volume_db = -3.3918
bus = &"Fx"

[node name="Select2" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("11_8cauw")
volume_db = -15.0
pitch_scale = 3.0
bus = &"Fx"

[node name="Select3" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("9_bv76o")
volume_db = -3.8867
bus = &"Fx"
